--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <script type="text/javascript" src="simplepeer.min.js"></script>
 	<script type="text/javascript" src="socket.io.js"></script>    
     <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>	
+    <!-- <script src="p5.sound.min.js"></script>	 -->
     <script type="text/javascript" src="p5livemedia.js"></script>    
     
     <link rel="stylesheet" type="text/css" href="style.css">
